@@ -37,7 +37,7 @@ class FixedStack
   public:
     using StackFunction = std::function<void(T&)>;
 
-    FixedStack<T, CAPACITY>() = default;
+    FixedStack() = default;
 
     bool empty() const { return _size == 0; }
     bool full() const  { return _size >= CAPACITY; }
