@@ -482,6 +482,8 @@ string TIASurface::effectsInfo() const
     case Filter::BlarggPhosphor:
       buf << myNTSCFilter.getPreset() << ", phosphor=" << myPBlend;
       break;
+    default:
+      break;  // Not supposed to get here
   }
   if(attr.blendalpha)
     buf << ", scanlines=" << attr.blendalpha
@@ -585,6 +587,9 @@ void TIASurface::render(bool shade)
       myNTSCFilter.render(myTIA->frameBuffer(), width, height, out, outPitch << 2, myRGBFramebuffer.data());
       break;
     }
+
+    default:
+      break;  // Not supposed to get here
   }
 
   // Draw TIA image
@@ -624,7 +629,7 @@ void TIASurface::renderForSnapshot()
   myTiaSurface->basePtr(outPtr, outPitch);
 
   mySaveSnapFlag = false;
-  switch (myFilter)
+  switch(myFilter)
   {
     // For non-phosphor modes, render the frame again
     case Filter::Normal:
@@ -650,11 +655,16 @@ void TIASurface::renderForSnapshot()
     }
 
     case Filter::BlarggPhosphor:
+    {
       uInt32 bufofs = 0;
       for(uInt32 y = height; y; --y)
         for(uInt32 x = outPitch; x; --x)
           outPtr[pos++] = averageBuffers(bufofs++);
       break;
+    }
+
+    default:
+      break;  // Not supposed to get here
   }
 
   if(myPhosphorHandler.phosphorEnabled())
